# mdimension

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CI-20251220-005645.md  CI-20251220-023409.md  CI-20251221-090546.md  CLAUDE.md  GEMINI.md  README.md  TODO.md  codex.sh  dd.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  temp-test-output-final-2.txt  temp-test-output-final.txt  temp-test-output.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/commands/: bugfix-blackhole.md  bugfix.md  gl_skybox.md  (+6 more)
.gemini/: fix_log.txt
.github/: copilot-instructions.md
docs/: api.md  architecture-review.md  architecture.md  black-hole-phase2.md  black-hole-review.md  blackhole-transcript.md  cinematic_black_hole_visualization_spec.md  color_modes.md  database.md  deployment.md  development.md  fog-review.md  frontend.md  performance-data.json  performance-review.md  refactor-review.md  rendering-pipeline.md  schroedinger-optimize.md  seniority-assessment-codex.md  seniority-review-2024-12-19.md  skybox-png-ktx2-commands.md  testing.md  video-export.md  video-review.md
screenshots/: debug-polytope-all-logs.json
scripts/: verify-convexhull-winding.ts  verify-cube-winding.ts  verify-hypercube-winding.ts  verify-winding-others.ts  verify-winding.test.ts  verify-winding.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx
src/wasm/mdimension_core/: Cargo.toml
src/wasm/mdimension_core/src/: animation.rs  edges.rs  faces.rs  hull.rs  knn.rs  lib.rs  roots.rs  wythoff.rs
test-results/: .last-run.json
(+1431 files in other folders)
