[package]
name = "mdimension-core"
version = "0.1.0"
edition = "2021"
description = "Core geometric algorithms for mdimension (WASM)"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
nalgebra = "0.32"
console_error_panic_hook = "0.1.7"

# Optimization profile for Release builds (Small binary size)
[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
